--- a/index.html
+++ b/index.html
@@ -224,12 +224,12 @@
     <div class="container mb-5">
       <div class="row">
         <div
-          class="col-3 p-3 text-center bg-black text-white border border-secondary"
+          class=" col-12 col-md-3 p-3 text-center bg-black text-white border border-secondary"
         >
           Column
         </div>
         <div
-          class="col-3 offset-6 p-3 text-center bg-black text-white border border-secondary"
+          class=" col-12 col-md-3 offset-md-6 p-3 text-center bg-black text-white border border-secondary"
         >
           Column
         </div>
